--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google" content="notranslate" />
     <link rel="icon" type="image/x-icon" href="favicon.png" />
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body onload="onInit()">
-    <script src="./main.js"></script>
+    <script src="./index.js"></script>
     <div class="container">
       <div class="hour">
         <div class="block">
